--- a/src/ApiGateway/ApiGateway/appsettings.json
+++ b/src/ApiGateway/ApiGateway/appsettings.json
@@ -2,8 +2,89 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Yarp": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ForwardedHeaders": {
+    "Enabled": false
+  },
+
+  "ReverseProxy": {
+    "Routes": {
+      "orders_swagger": {
+        "Order": 0,
+        "ClusterId": "orders",
+        "Match": { "Path": "/orders/swagger/{**catch-all}" },
+        "Transforms": [
+          { "PathRemovePrefix": "/orders" }
+        ]
+      },
+      "orders_api": {
+        "Order": 1,
+        "ClusterId": "orders",
+        "Match": { "Path": "/orders/{**catch-all}" },
+        "Timeout": "00:02:00",
+        "MaxRequestBodySize": 1048576
+      },
+
+      "payments_swagger": {
+        "Order": 0,
+        "ClusterId": "payments",
+        "Match": { "Path": "/accounts/swagger/{**catch-all}" },
+        "Transforms": [
+          { "PathRemovePrefix": "/accounts" }
+        ]
+      },
+      "payments_api": {
+        "Order": 1,
+        "ClusterId": "payments",
+        "Match": { "Path": "/accounts/{**catch-all}" },
+        "Timeout": "00:02:00",
+        "MaxRequestBodySize": 1048576
+      }
+    },
+
+    "Clusters": {
+      "orders": {
+        "HttpRequest": {
+          "ActivityTimeout": "00:02:00"
+        },
+        "HealthCheck": {
+          "Passive": {
+            "Enabled": true,
+            "Policy": "TransportFailureRate",
+            "ReactivationPeriod": "00:00:30"
+          }
+        },
+        "Metadata": {
+          "TransportFailureRateHealthPolicy.RateLimit": "0.5"
+        },
+        "Destinations": {
+          "orders/d1": { "Address": "http://orders-service:8080/" }
+        }
+      },
+
+      "payments": {
+        "HttpRequest": {
+          "ActivityTimeout": "00:02:00"
+        },
+        "HealthCheck": {
+          "Passive": {
+            "Enabled": true,
+            "Policy": "TransportFailureRate",
+            "ReactivationPeriod": "00:00:30"
+          }
+        },
+        "Metadata": {
+          "TransportFailureRateHealthPolicy.RateLimit": "0.5"
+        },
+        "Destinations": {
+          "payments/d1": { "Address": "http://payments-service:8080/" }
+        }
+      }
+    }
+  }
 }
