--- a/src/ApiGateway/ApiGateway/appsettings.Development.json
+++ b/src/ApiGateway/ApiGateway/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft": "Information",
+      "Yarp": "Debug"
     }
+  },
+  "ForwardedHeaders": {
+    "Enabled": false
   }
 }
