--- a/src/OrdersService/OrdersService/appsettings.json
+++ b/src/OrdersService/OrdersService/appsettings.json
@@ -2,8 +2,29 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "MassTransit": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "OrdersDb": ""
+  },
+
+  "RabbitMq": {
+    "Host": "rabbitmq",
+    "VirtualHost": "/",
+    "User": "guest",
+    "Password": "guest",
+    "PrefetchCount": 16,
+    "PaymentResultsQueue": "orders.payment-results"
+  },
+
+  "Outbox": {
+    "PollingIntervalMs": 500,
+    "BatchSize": 50,
+    "LockSeconds": 30,
+    "MaxErrorLength": 2000
+  }
 }
