--- a/src/OrdersService/OrdersService/appsettings.Development.json
+++ b/src/OrdersService/OrdersService/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "MassTransit": "Debug"
     }
+  },
+  "Outbox": {
+    "PollingIntervalMs": 300,
+    "BatchSize": 25,
+    "LockSeconds": 20
   }
 }
