--- a/tests/Orders.IntegrationTests/Orders.IntegrationTests/Orders.IntegrationTests.csproj
+++ b/tests/Orders.IntegrationTests/Orders.IntegrationTests/Orders.IntegrationTests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\OrdersService\OrdersService\OrdersService.csproj" />
     <ProjectReference Include="..\..\src\OrdersService\OrdersService\OrdersService.csproj" />
     <ProjectReference Include="..\..\src\Contracts\Contracts\Contracts.csproj" />
   </ItemGroup>
