--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,15 +1,158 @@
 services:
-  api-gateway:
-    build:
-      context: ..
-      dockerfile: src/ApiGateway/ApiGateway/Dockerfile
+  # -----------------------------
+  # Infra
+  # -----------------------------
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - appnet
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmq-diagnostics -q ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 20
 
+  orders-db:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_DB: orders
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5433:5432"
+    volumes:
+      - orders_db:/var/lib/postgresql/data
+    networks:
+      - appnet
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d orders"]
+      interval: 10s
+      timeout: 5s
+      retries: 20
+
+  payments-db:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_DB: payments
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5434:5432"
+    volumes:
+      - payments_db:/var/lib/postgresql/data
+    networks:
+      - appnet
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d payments"]
+      interval: 10s
+      timeout: 5s
+      retries: 20
+
+  # -----------------------------
+  # Backend
+  # -----------------------------
   orders-service:
     build:
       context: ..
       dockerfile: src/OrdersService/OrdersService/Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: "Production"
+      ConnectionStrings__OrdersDb: "Host=orders-db;Port=5432;Database=orders;Username=postgres;Password=postgres"
+      RabbitMq__Host: "rabbitmq"
+      RabbitMq__User: "guest"
+      RabbitMq__Password: "guest"
+      RabbitMq__VirtualHost: "/"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      orders-db:
+        condition: service_healthy
+    networks:
+      - appnet
+    ports:
+      - "8081:8080"
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:8080/health || wget -qO- http://localhost:8080/health/live"]
+      interval: 10s
+      timeout: 3s
+      retries: 20
 
   payments-service:
     build:
       context: ..
       dockerfile: src/PaymentsService/PaymentsService/Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: "Production"
+      ConnectionStrings__PaymentsDb: "Host=payments-db;Port=5432;Database=payments;Username=postgres;Password=postgres"
+      RabbitMq__Host: "rabbitmq"
+      RabbitMq__User: "guest"
+      RabbitMq__Password: "guest"
+      RabbitMq__VirtualHost: "/"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      payments-db:
+        condition: service_healthy
+    networks:
+      - appnet
+    ports:
+      - "8082:8080"
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:8080/health || wget -qO- http://localhost:8080/health/live"]
+      interval: 10s
+      timeout: 3s
+      retries: 20
+
+  api-gateway:
+    build:
+      context: ..
+      dockerfile: src/ApiGateway/ApiGateway/Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: "Production"
+      # если у тебя в gateway есть конфиг адресов сервисов — держи это в env
+      Downstream__OrdersBaseUrl: "http://orders-service:8080"
+      Downstream__PaymentsBaseUrl: "http://payments-service:8080"
+    depends_on:
+      orders-service:
+        condition: service_healthy
+      payments-service:
+        condition: service_healthy
+    networks:
+      - appnet
+    ports:
+      - "8080:8080"
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:8080/health || wget -qO- http://localhost:8080/health/live"]
+      interval: 10s
+      timeout: 3s
+      retries: 20
+
+  # -----------------------------
+  # Frontend (NO double paths)
+  # -----------------------------
+  frontend:
+    build:
+      context: ..
+      dockerfile: src/Frontend/Dockerfile
+    depends_on:
+      api-gateway:
+        condition: service_healthy
+    networks:
+      - appnet
+    ports:
+      - "8083:80"
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost/ >/dev/null 2>&1 || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 20
+
+networks:
+  appnet:
+
+volumes:
+  orders_db:
+  payments_db:
