--- a/src/Frontend/tsconfig.json
+++ b/src/Frontend/tsconfig.json
@@ -1,10 +1,4 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "bundler",
-    "module": "ESNext",
-    "target": "ES2020",
-    "jsx": "react-jsx",
-    "types": ["vite/client"],
-    "skipLibCheck": true
-  }
+  "files": [],
+  "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }]
 }
