frontend(proxy settings)
Added additional proxy headers and set HTTP version 1.1 for /orders/, /accounts/, and /health routes to improve forwarding and compatibility with the api-gateway. This ensures proper header propagation and protocol handling.

--- a/src/Frontend/nginx.conf
+++ b/src/Frontend/nginx.conf
@@ -11,10 +11,30 @@ server {
         add_header Cache-Control "public, max-age=604800, immutable";
     }
 
-    location ^~ /orders/ { proxy_pass http://api-gateway:8080; }
-    location ^~ /accounts/ { proxy_pass http://api-gateway:8080; }
-    location ^~ /health { proxy_pass http://api-gateway:8080; }
+    # API -> ApiGateway (в docker-compose этот hostname должен быть api-gateway)
+    location ^~ /orders/ {
+        proxy_pass http://api-gateway:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
+    location ^~ /accounts/ {
+        proxy_pass http://api-gateway:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location ^~ /health {
+        proxy_pass http://api-gateway:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
+
+    # SPA fallback
     location / {
         try_files $uri $uri/ /index.html;
     }
