--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -3,17 +3,23 @@ services:
   # Infra
   # -----------------------------
   rabbitmq:
-    image: rabbitmq:3-management
+    image: rabbitmq:4-management
     ports:
       - "5672:5672"
       - "15672:15672"
-    networks:
-      - appnet
+    networks: [appnet]
+    restart: on-failure:5
     healthcheck:
       test: ["CMD-SHELL", "rabbitmq-diagnostics -q ping"]
       interval: 10s
       timeout: 5s
       retries: 20
+      start_period: 20s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   orders-db:
     image: postgres:16-alpine
@@ -25,13 +31,19 @@ services:
       - "5433:5432"
     volumes:
       - orders_db:/var/lib/postgresql/data
-    networks:
-      - appnet
+    networks: [appnet]
+    restart: on-failure:5
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d orders"]
       interval: 10s
       timeout: 5s
       retries: 20
+      start_period: 20s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   payments-db:
     image: postgres:16-alpine
@@ -43,13 +55,19 @@ services:
       - "5434:5432"
     volumes:
       - payments_db:/var/lib/postgresql/data
-    networks:
-      - appnet
+    networks: [appnet]
+    restart: on-failure:5
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d payments"]
       interval: 10s
       timeout: 5s
       retries: 20
+      start_period: 20s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # -----------------------------
   # Backend
@@ -60,25 +78,40 @@ services:
       dockerfile: src/OrdersService/OrdersService/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: "Production"
+      ASPNETCORE_URLS: "http://+:8080"
+
       ConnectionStrings__OrdersDb: "Host=orders-db;Port=5432;Database=orders;Username=postgres;Password=postgres"
+
       RabbitMq__Host: "rabbitmq"
       RabbitMq__User: "guest"
       RabbitMq__Password: "guest"
       RabbitMq__VirtualHost: "/"
+      # если у тебя в коде есть конкретные имена очередей — держи их здесь
+      RabbitMq__OrderCreatedQueue: "orders.order-created"
+      RabbitMq__PaymentResultQueue: "payments.payment-result"
     depends_on:
       rabbitmq:
         condition: service_healthy
       orders-db:
         condition: service_healthy
-    networks:
-      - appnet
+    networks: [appnet]
     ports:
       - "8081:8080"
+    init: true
+    restart: on-failure:5
+    # ВАЖНО: не используем curl/wget внутри .NET контейнера.
+    # Проверяем, что процесс dotnet запущен (готовность всё равно проверяем smoke-check'ом с хоста в CI).
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:8080/health || wget -qO- http://localhost:8080/health/live"]
+      test: ["CMD-SHELL", "tr '\\0' ' ' < /proc/1/cmdline | grep -qi dotnet"]
       interval: 10s
       timeout: 3s
-      retries: 20
+      retries: 30
+      start_period: 20s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   payments-service:
     build:
@@ -86,25 +119,37 @@ services:
       dockerfile: src/PaymentsService/PaymentsService/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: "Production"
+      ASPNETCORE_URLS: "http://+:8080"
+
       ConnectionStrings__PaymentsDb: "Host=payments-db;Port=5432;Database=payments;Username=postgres;Password=postgres"
+
       RabbitMq__Host: "rabbitmq"
       RabbitMq__User: "guest"
       RabbitMq__Password: "guest"
       RabbitMq__VirtualHost: "/"
+      RabbitMq__OrderCreatedQueue: "orders.order-created"
+      RabbitMq__PaymentResultQueue: "payments.payment-result"
     depends_on:
       rabbitmq:
         condition: service_healthy
       payments-db:
         condition: service_healthy
-    networks:
-      - appnet
+    networks: [appnet]
     ports:
       - "8082:8080"
+    init: true
+    restart: on-failure:5
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:8080/health || wget -qO- http://localhost:8080/health/live"]
+      test: ["CMD-SHELL", "tr '\\0' ' ' < /proc/1/cmdline | grep -qi dotnet"]
       interval: 10s
       timeout: 3s
-      retries: 20
+      retries: 30
+      start_period: 20s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   api-gateway:
     build:
@@ -112,7 +157,8 @@ services:
       dockerfile: src/ApiGateway/ApiGateway/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: "Production"
-      # если у тебя в gateway есть конфиг адресов сервисов — держи это в env
+      ASPNETCORE_URLS: "http://+:8080"
+
       Downstream__OrdersBaseUrl: "http://orders-service:8080"
       Downstream__PaymentsBaseUrl: "http://payments-service:8080"
     depends_on:
@@ -120,18 +166,25 @@ services:
         condition: service_healthy
       payments-service:
         condition: service_healthy
-    networks:
-      - appnet
+    networks: [appnet]
     ports:
       - "8080:8080"
+    init: true
+    restart: on-failure:5
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:8080/health || wget -qO- http://localhost:8080/health/live"]
+      test: ["CMD-SHELL", "tr '\\0' ' ' < /proc/1/cmdline | grep -qi dotnet"]
       interval: 10s
       timeout: 3s
-      retries: 20
+      retries: 30
+      start_period: 20s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # -----------------------------
-  # Frontend (NO double paths)
+  # Frontend
   # -----------------------------
   frontend:
     build:
@@ -140,15 +193,21 @@ services:
     depends_on:
       api-gateway:
         condition: service_healthy
-    networks:
-      - appnet
+    networks: [appnet]
     ports:
       - "8083:80"
+    restart: on-failure:5
     healthcheck:
       test: ["CMD-SHELL", "wget -qO- http://localhost/ >/dev/null 2>&1 || exit 1"]
       interval: 10s
       timeout: 3s
-      retries: 20
+      retries: 30
+      start_period: 10s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 networks:
   appnet:
