--- a/src/ApiGateway/ApiGateway/appsettings.json
+++ b/src/ApiGateway/ApiGateway/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
 
   "ForwardedHeaders": {
-    "Enabled": false
+    "Enabled": false,
+    "TrustAllProxies": false
   },
 
   "ReverseProxy": {
@@ -63,7 +64,7 @@
           "TransportFailureRateHealthPolicy.RateLimit": "0.5"
         },
         "Destinations": {
-          "orders/d1": { "Address": "http://orders-service:8080/" }
+          "d1": { "Address": "http://orders-service:8080/" }
         }
       },
 
@@ -82,7 +83,7 @@
           "TransportFailureRateHealthPolicy.RateLimit": "0.5"
         },
         "Destinations": {
-          "payments/d1": { "Address": "http://payments-service:8080/" }
+          "d1": { "Address": "http://payments-service:8080/" }
         }
       }
     }
