--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,16 @@ name: CI
 
 on:
   push:
-    branches: ["main", "master", "dev"]
+    branches:
+      - main
+      - master
+      - dev
   pull_request:
-    branches: ["main", "master", "dev"]
-  workflow_dispatch:
+    branches:
+      - main
+      - master
+      - dev
+  workflow_dispatch: {}
 
 concurrency:
   group: ci-${{ github.ref }}
@@ -15,7 +21,7 @@ permissions:
   contents: read
 
 env:
-  DOTNET_NOLOGO: true
+  DOTNET_NOLOGO: "true"
   DOTNET_CLI_TELEMETRY_OPTOUT: "1"
   NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
   ASPNETCORE_ENVIRONMENT: Testing
@@ -35,7 +41,7 @@ jobs:
       - name: Setup .NET 9
         uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: "9.0.x"
+          dotnet-version: 9.0.x
 
       - name: Cache NuGet packages
         uses: actions/cache@v4
@@ -45,7 +51,6 @@ jobs:
           restore-keys: |
             nuget-${{ runner.os }}-
 
-      # -------- Find SLN anywhere --------
       - name: Detect solution (anywhere)
         id: sln
         shell: bash
@@ -65,41 +70,41 @@ jobs:
           else
             echo "found=false" >> "$GITHUB_OUTPUT"
             echo "path=" >> "$GITHUB_OUTPUT"
-            echo "No .sln found, will use ./src fallback"
+            echo "No .sln found, will use csproj fallback"
           fi
 
-      # -------- Restore/Build with fallback --------
-            - name: Restore backend
+      - name: Restore backend (try SLN, fallback to csproj)
         shell: bash
         run: |
           set -euo pipefail
 
           if [ "${{ steps.sln.outputs.found }}" = "true" ]; then
-            echo "Trying restore with solution"
+            echo "Trying restore with solution: ${{ steps.sln.outputs.path }}"
             if dotnet restore "${{ steps.sln.outputs.path }}"; then
+              echo "Solution restore OK"
               exit 0
             fi
-            echo "Solution restore failed, fallback to csproj"
+            echo "Solution restore FAILED, falling back to csproj restore"
           fi
 
           dotnet restore $(find src -name '*.csproj')
 
-      - name: Build backend
+      - name: Build backend (try SLN, fallback to csproj)
         shell: bash
         run: |
           set -euo pipefail
 
           if [ "${{ steps.sln.outputs.found }}" = "true" ]; then
-            echo "Trying build with solution"
+            echo "Trying build with solution: ${{ steps.sln.outputs.path }}"
             if dotnet build "${{ steps.sln.outputs.path }}" -c Release --no-restore; then
+              echo "Solution build OK"
               exit 0
             fi
-            echo "Solution build failed, fallback to csproj"
+            echo "Solution build FAILED, falling back to csproj build"
           fi
 
           dotnet build $(find src -name '*.csproj') -c Release --no-restore
 
-      # -------- Frontend --------
       - name: Detect frontend
         id: fe
         shell: bash
@@ -115,7 +120,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
+          cache: npm
           cache-dependency-path: src/Frontend/package-lock.json
 
       - name: Frontend install
@@ -133,7 +138,6 @@ jobs:
         working-directory: src/Frontend
         run: npm run build
 
-      # -------- Docker Compose --------
       - name: Validate docker-compose
         run: docker compose -f deploy/docker-compose.yml config > /dev/null
 
@@ -143,7 +147,6 @@ jobs:
             up -d --build --wait --wait-timeout 240
           docker compose -f deploy/docker-compose.yml -p swd-dz4-ci ps
 
-      # -------- Smoke checks --------
       - name: Smoke check ApiGateway
         run: |
           curl -fsS http://localhost:8080/health || curl -fsS http://localhost:8080/health/live
@@ -152,11 +155,9 @@ jobs:
         if: steps.fe.outputs.present == 'true'
         run: curl -fsS http://localhost:8083/
 
-      # -------- Tests --------
       - name: Run backend tests
         run: dotnet test ./tests -c Release --logger "trx;LogFileName=test-results.trx"
 
-      # -------- Artifacts --------
       - name: Collect compose logs
         if: always()
         run: |
@@ -176,7 +177,6 @@ jobs:
           name: test-results
           path: "**/*.trx"
 
-      # -------- Cleanup --------
       - name: Docker Compose Down
         if: always()
         run: docker compose -f deploy/docker-compose.yml -p swd-dz4-ci down -v --remove-orphans
