--- a/src/PaymentsService/PaymentsService/Dockerfile
+++ b/src/PaymentsService/PaymentsService/Dockerfile
@@ -1,10 +1,11 @@
+# syntax=docker/dockerfile:1
+
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 
-COPY global.json ./
 COPY Directory.Packages.props ./
-COPY AsyncShopPlatform/AsyncShopPlatform.sln ./
 
+# Contracts (внутри него Common/)
 COPY src/Contracts/Contracts/Contracts.csproj src/Contracts/Contracts/
 COPY src/PaymentsService/PaymentsService/PaymentsService.csproj src/PaymentsService/PaymentsService/
 
@@ -15,8 +16,9 @@ COPY . .
 WORKDIR /src/src/PaymentsService/PaymentsService
 RUN dotnet publish -c Release -o /app/publish --no-restore /p:UseAppHost=false
 
-FROM mcr.microsoft.com/dotnet/aspnet:9.0
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
 WORKDIR /app
+
 ENV ASPNETCORE_HTTP_PORTS=8080
 EXPOSE 8080
 
