--- a/src/Frontend/nginx.conf
+++ b/src/Frontend/nginx.conf
@@ -5,37 +5,21 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    location /assets/ {
-        try_files $uri =404;
-        expires 7d;
-        add_header Cache-Control "public, max-age=604800, immutable";
-    }
-
-    # API -> ApiGateway (в docker-compose этот hostname должен быть api-gateway)
-    location ^~ /orders/ {
-        proxy_pass http://api-gateway:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location ^~ /accounts/ {
-        proxy_pass http://api-gateway:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location ^~ /health {
-        proxy_pass http://api-gateway:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
+    # Health endpoint for docker compose / CI
+    location = /health {
+        add_header Content-Type text/plain;
+        return 200 "ok\n";
     }
 
     # SPA fallback
     location / {
         try_files $uri $uri/ /index.html;
+    }
+
+    # Static assets caching
+    location ~* \.(?:css|js|mjs|map|png|jpg|jpeg|gif|svg|ico|webp|woff2?)$ {
+        try_files $uri =404;
+        expires 7d;
+        add_header Cache-Control "public";
     }
 }
