--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,14 +7,23 @@
     <!-- API Gateway -->
     <PackageVersion Include="Yarp.ReverseProxy" Version="2.3.0" />
 
-    <!-- Swagger -->
-    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+    <!-- Swagger (у тебя в PaymentsService стоит 10.1.0) -->
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="10.1.0" />
+
+    <!-- EF Core (.NET 9) -->
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.10" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10" />
+
+    <!-- PostgreSQL EF provider (в твоих проектах было 9.0.3/9.0.4 — выравниваем на 9.0.4) -->
+    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
 
     <!-- Messaging -->
     <PackageVersion Include="MassTransit" Version="8.5.7" />
+    <PackageVersion Include="MassTransit.RabbitMQ" Version="8.5.7" />
     <PackageVersion Include="MassTransit.Testing" Version="8.5.7" />
 
-    <!-- Tests -->
+    <!-- Tests (оставляю как было у тебя) -->
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.9" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageVersion Include="Testcontainers.PostgreSql" Version="4.9.0" />
